--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,61 +1,40 @@
-# CI and PR build script
-
 trigger:
-  - master
+- '*'
+pr:
+- '*'
+
+strategy:
+  matrix:
+    linux:
+      imageName: 'ubuntu-16.04'
+    mac:
+      imageName: 'macos-10.14'
+    windows:
+      imageName: 'vs2017-win2016'
 
 pool:
-  vmImage: ubuntu-16.04
+  vmImage: $(imageName)
 
 steps:
-  # for convenience, we tag CI-produced packages with a version number
-  # pointing to the commit which was built. for PRs, also include the PR #.
-  - bash: |
-      PACKAGE_VERSION=$(node -p "require('./package.json').version")
 
-      if [ -n "$SYSTEM_PULLREQUEST_PULLREQUESTNUMBER" ]; then
-        VERSION_STRING=${PACKAGE_VERSION}-pr-${SYSTEM_PULLREQUEST_PULLREQUESTNUMBER}-$(git rev-parse --short HEAD)
-      else
-        VERSION_STRING=${PACKAGE_VERSION}-ci-$(git rev-parse --short HEAD)
-      fi
+- task: NodeTool@0
+  inputs:
+    versionSpec: '8.x'
+  displayName: 'Install Node.js'
 
-      npm --no-git-tag-version version $VERSION_STRING
-      echo "##vso[build.updatebuildnumber]${VERSION_STRING}_${BUILD_BUILDID}"
-      echo "$PACKAGE_VERSION" > version.txt
-    displayName: Set version number of package and build
+- bash: |
+    /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+    echo ">>> Started xvfb"
+  displayName: Start xvfb
+  condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
 
-  - script: npm install
-    displayName: npm install
-
-  - script: npm run test
-    displayName: Run unit tests
-
-  # Acquire the `vsce` tool and use it to package
-  - script: |
-      sudo npm install -g vsce
-      vsce package
-    displayName: Create VSIX
-
-  # For releasable builds, we'll want the branch
-  # Expects that a 'version.txt' has been laid down by a previous step
-  - bash: |
-      echo $(Build.SourceBranch) | sed "s|refs/[^/]*/||" > branch.txt
-      PACKAGE_VERSION=$(cat version.txt)
-      VERSION_REGEX="## $(echo $PACKAGE_VERSION | sed 's/\./\\./g')"
-    displayName: Get branch
-
-  # Choose files to publish
-  - task: CopyFiles@2
-    displayName: Stage VSIX for publishing
-    inputs:
-      contents: |-
-        *.vsix
-        version.txt
-        branch.txt
-      targetFolder: $(Build.ArtifactStagingDirectory)
-
-  # Publish files as an artifact
-  - task: PublishPipelineArtifact@1
-    displayName: Publish VSIX
-    inputs:
-      artifact: git-mob-vs-code
-      targetPath: $(Build.ArtifactStagingDirectory)
+- bash: |
+    echo ">>> Compile vscode-test"
+    yarn && yarn compile
+    echo ">>> Compiled vscode-test"
+    cd sample
+    echo ">>> Run sample integration test"
+    yarn && yarn compile && yarn test
+  displayName: Run Tests
+  env:
+    DISPLAY: ':99.0'
