--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,11 +29,9 @@ steps:
   condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
 
 - bash: |
-    echo ">>> Compile vscode-test"
+    echo ">>> Compile"
     yarn && yarn compile
-    echo ">>> Compiled vscode-test"
-    cd sample
-    echo ">>> Run sample integration test"
+    echo ">>> Run test"
     yarn && yarn compile && yarn test
   displayName: Run Tests
   env:
