--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,8 +31,8 @@ steps:
 - bash: |
     echo ">>> Compile"
     yarn && yarn compile
-    echo ">>> pwd"
-    yarn && yarn pwd
+    echo ">>> cwd"
+    yarn && yarn cwd
     echo ">>> Run test"
     yarn && yarn compile && yarn test
   displayName: Run Tests
