--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,10 +29,12 @@ steps:
   condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
 
 - bash: |
+    echo ">>> install npm"
+    npm install cwd
     echo ">>> Compile"
     yarn && yarn compile
     echo ">>> cwd"
-    yarn && yarn cwd
+    ls
     echo ">>> Run test"
     yarn && yarn compile && yarn test
   displayName: Run Tests
