--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"vscode-test": "^1.3.0"
 	},
 	"dependencies": {
+		"cwd": "^0.10.0",
 		"decache": "^4.5.1",
 		"istanbul": "^0.4.5",
 		"remap-istanbul": "^0.13.0",
