--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
 		"lint": "eslint src --ext ts",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
-		"test": "node ./out/test/runTest.js"
+		"test": "node ./out/test/runTest.js",
+		"copy": "cpx ./src/test/suite/testfiles/**/* ./out/testfiles"
 	},
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
@@ -51,6 +52,7 @@
 		"vscode-test": "^1.3.0"
 	},
 	"dependencies": {
+		"cpx": "^1.5.0",
 		"cwd": "^0.10.0",
 		"decache": "^4.5.1",
 		"istanbul": "^0.4.5",
