--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
 		"test": "node ./out/test/runTest.js",
-		"copy": "cpx ./src/test/suite/testfiles/**/* ./out/testfiles"
+		"copy": "cp ./src/test/suite/testfiles/*/* ./out"
 	},
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
