--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
 		"test": "node ./out/test/runTest.js",
+		"ls" : "ls",
+		"cwd" : "cwd",
 		"copy": "cp ./src/test/suite/testfiles/*/* ./out"
 	},
 	"devDependencies": {
