--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,8 @@ steps:
     echo ">>> Compile"
     yarn && yarn compile
     echo ">>> Get Test files"
+    yarn && yarn cwd
+    yarn && yarn ls
     yarn && yarn copy
     echo ">>> Run test"
     yarn && yarn compile && yarn test
