--- a/package.json
+++ b/package.json
@@ -35,10 +35,7 @@
 		"lint": "eslint src --ext ts",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
-		"test": "node ./out/test/runTest.js",
-		"cd" : "cd ..",
-		"cwd" : "cwd",
-		"copy": "cp ./src/test/suite/testfiles/*/* ./out"
+		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
