--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,9 +30,9 @@ steps:
 
 - bash: |
     echo ">>> Compile"
-    npm run compile
+    yarn && yarn compile
     echo ">>> Run test"
-    npm run test
+    yarn && yarn test
   displayName: Run Tests
   env:
     DISPLAY: ':99.0'
